# raspe

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
notebooks/: 01_presidencia.ipynb  02_camara.ipynb  03_senado.ipynb  04_ipea.ipynb  05_capes.ipynb  05_cnj.ipynb  06_cfm.ipynb  07_folha.ipynb  08_nyt.ipynb  09_saudelegis.ipynb
src/raspe/: __init__.py  abstract_scraper.py  base_scraper.py  exceptions.py  html_scraper.py  playwright_scraper.py  scraper_manager.py  selenium_scraper.py  utils.py
src/raspe/scrapers/: __init__.py  ans.py  anvisa.py  camara.py  capes.py  cfm.py  comunicaCNJ.py  datalegis.py  folha.py  ipea.py  nyt.py  presidencia.py  saudelegis.py  senado.py
tests/: _helpers.py  conftest.py  test_abstract_scraper.py  test_base_scraper.py  test_exceptions.py  test_html_scraper.py  test_init.py  test_ipea.ipynb  test_scraper_manager.py  test_utils.py
tests/camara/: test_raspar_contract.py
tests/camara/samples/raspar/: no_results.html  page_01.html  page_02.html  single_page.html
tests/capes/: test_raspar_contract.py
tests/capes/samples/raspar/: no_results.html  page_01.html  page_02.html
tests/cfm/: test_raspar_contract.py
tests/cfm/samples/raspar/: no_results.html  page_01.html  page_02.html  single_page.html
tests/datalegis/: test_config.py
tests/datalegis/samples/parse/: no_results.html  typical.html
tests/fixtures/capture/: README.md  _util.py  capes.py  folha.py  ipea.py  presidencia.py
tests/folha/: test_raspar_contract.py
tests/folha/samples/raspar/: no_results.html  page_01.html  page_02.html  single_page.html
tests/ipea/: test_raspar_contract.py
tests/ipea/samples/raspar/: no_results.html  page_01.html  page_02.html  single_page.html
tests/nyt/: test_raspar_contract.py
tests/nyt/samples/raspar/: no_results.json  page_01.json  page_02.json  single_page.json  unauthorized.json
tests/presidencia/: test_raspar_contract.py
tests/presidencia/samples/raspar/: no_results.html  page_01.html  page_02.html  single_page.html
tests/saudelegis/: test_config.py
tests/saudelegis/samples/parse/: no_results.html  typical.html
tests/senado/: test_raspar_contract.py
tests/senado/samples/raspar/: no_results.html  page_01.html  page_02.html  single_page.html
