[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raspe"
version = "0.1.0"
description = "Raspadores para Pesquisas Acadêmicas - ferramentas para coleta de dados de fontes brasileiras"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Bruno da Cunha de Oliveira", email = "bruno.dcdo@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=2.0.0",
    "requests>=2.28.0",
    "tenacity>=8.2.3",
    "beautifulsoup4>=4.12.2",
    "tqdm>=4.66.1",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=7.1.0",
]

[project.urls]
Homepage = "https://github.com/bdcdo/raspe"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "-v -s --cov=src/raspe --cov-report=html --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
