[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raspe"
version = "0.1.0"
description = "Raspadores para Pesquisas Acadêmicas - ferramentas para coleta de dados de fontes brasileiras"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Bruno da Cunha de Oliveira", email = "bruno.dcdo@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=2.0.0",
    "requests>=2.28.0",
    "tenacity>=8.2.3",
    "beautifulsoup4>=4.12.2",
    "tqdm>=4.66.1",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=7.1.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "responses>=0.25.0,<1.0.0",
    "pylint>=3.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pyright>=1.1.350",
    "types-requests>=2.32.0",
    "pre-commit>=3.0.0",
]
browser = [
    "playwright>=1.40.0",
    "playwright-stealth>=1.0.6",
]
all = [
    "raspe[dev,browser]",
]

[project.urls]
Homepage = "https://github.com/bdcdo/raspe"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "-v -ra --strict-markers --strict-config --import-mode=importlib -m 'not integration' --cov=src/raspe --cov-report=html --cov-report=term-missing"
markers = [
    "slow: testes que levam mais de alguns segundos",
    "integration: testes que tocam a rede ou serviços externos (excluídos por padrão)",
]
filterwarnings = [
    "error",
    # urllib3 InsecureRequestWarning é silenciado pelo ScraperPresidencia no construtor,
    # mas pode escapar antes do silenciamento durante import. Mantemos como warning.
    "default::urllib3.exceptions.InsecureRequestWarning",
]

[tool.pylint.main]
load-plugins = ["pylint.extensions.docparams"]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.design]
max-args = 10
max-locals = 20
max-returns = 6
max-branches = 15
max-statements = 50
max-parents = 7
max-attributes = 10
min-public-methods = 1
max-public-methods = 25

[tool.pylint.similarities]
min-similarity-lines = 4
ignore-comments = true
ignore-docstrings = true
ignore-imports = false

[tool.pylint.variables]
init-import = false
dummy-variables-rgx = "_+$|(_[a-zA-Z0-9_]*[a-zA-Z0-9]+?$)|dummy|^ignored_|^unused_"

[tool.pylint.classes]
valid-classmethod-first-arg = "cls"
valid-metaclass-classmethod-first-arg = "mcs"

[tool.pylint.imports]
known-third-party = ["pandas", "requests", "beautifulsoup4", "tqdm", "tenacity", "playwright"]

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
    "too-many-instance-attributes",
    "too-many-public-methods",
    "too-many-nested-blocks",
    "import-error",
    "no-member",
    "unused-argument",
    "broad-except",
    "fixme",
    "invalid-name",
    "ungrouped-imports",
    "no-else-return",
    "no-else-raise",
    "logging-fstring-interpolation",
    "logging-not-lazy",
    "trailing-whitespace",
    "trailing-newlines",
    "duplicate-code",
    "missing-param-doc",
    "missing-type-doc",
    "missing-return-doc",
    "missing-return-type-doc",
    "line-too-long",
    "import-outside-toplevel",
    "redefined-outer-name",
    "reimported",
    "attribute-defined-outside-init",
    "use-maxsplit-arg",
    "f-string-without-interpolation",
    "consider-using-f-string",
    "use-dict-literal",
    "unnecessary-ellipsis",
    "differing-param-doc",
    "differing-type-doc",
    "too-many-return-statements",
]

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["raspe"]
known_third_party = [
    "pandas",
    "requests",
    "beautifulsoup4",
    "tqdm",
    "tenacity",
    "playwright",
]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist",
    "*.egg-info",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

# Módulos do Playwright/Browser usam atributos Optional inicializados sob demanda
# por _ensure_playwright(); refatorá-los para narrowing está fora do escopo do
# setup de pre-commit. Os warnings continuam visíveis no Pylance/Pyright.
[[tool.mypy.overrides]]
module = [
    "raspe.playwright_scraper",
    "raspe.scrapers.saudelegis",
    "raspe.scrapers.datalegis",
]
disable_error_code = ["attr-defined", "unreachable", "no-any-return", "union-attr"]

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__", "**/.venv", "dev", "notebooks", "tests"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
reportMissingModuleSource = "warning"
reportOptionalMemberAccess = "warning"
reportAttributeAccessIssue = "warning"
reportArgumentType = "warning"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
